completed mobile design for assessment 2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div id="grid">
+        <div class="bg">
+            <!-- <img class="bg-mobile" src="./assets/bg-intro-mobile.png" alt="mobile images"> -->
+        </div>
+        <div class="content">
+            <div class="code">
+                <h1>Learn to code by <br> watching others</h1>
+            </div>
+            <div class="desc">
+                <p>
+                    See how experienced developers solve problems in real time. Watching scripted tutorials is great, but understanding how developers think is invaluable.
+                </p>
+            </div>
+        </div>
+        
+        <div class="free">
+            <a href="#">
+                <h4>Try it free 7 days <span>then $20/mo. thereafter</span></h4>
+            </a>
+        </div>
+        <div class="form">
+            <form class="field">
+                <input type="text" name="firstName" id="fname" placeholder="First Name" required>
+                <input type="text" name="lastName" id="lname" placeholder="Last Name" required>
+                <input type="email" name="email" id="email" placeholder="Email Address" required>
+                <input type="password" name="password" id="pword" placeholder="Password" required>
+                <a href="#" class="claim">
+                    Claim your free trial
+                </a>
+                <p>
+                    By clicking the button you are agreeing to our <span class="terms">Terms and Services</span>
+                </p>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
