--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="content">
             <div class="code">
-                <h1>Learn to code by <br> watching others</h1>
+                <h1>Learn to code by watching others</h1>
             </div>
             <div class="desc">
                 <p>
